--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
         <h2>Anéis</h2>
         <div class="container">
             <div class="container-produto">
-                <img src="./src/img/colar-rosa2.jpg" alt="">
+                <img src="./src/img/Chocker escama de peixe/principal-chocker-escama.jpg" alt="">
                 <h3>Lorem ipsum dolor sit amet consectetur</h3>
                 <p>R$ 20,00</p>
             </div>
             <div class="container-produto">
-                <img src="./src/img/colar-rosa3.jpg" alt="">
+                <img src="./src/img/Chocker pequenos corações/principais-pequenos-coracoes.jpg" alt="">
                 <h3>Lorem ipsum dolor sit amet consectetur</h3>
                 <p>R$ 20,00</p>
             </div>
             <div class="container-produto">
-                <img src="./src/img/colar-rosa4.jpg" alt="">
+                <img src="./src/img/Choker moedinhas/principal.jpg" alt="">
                 <h3>Lorem ipsum dolor sit amet consectetur</h3>
                 <p>R$ 20,00</p>
             </div>
             <div class="container-produto">
-                <img src="./src/img/colar-rosa5.jpg" alt="">
+                <img src="./src/img/Choker Corações Entrelaçados/principal.jpg" alt="">
                 <h3>Lorem ipsum dolor sit amet consectetur</h3>
                 <p>R$ 20,00</p>
             </div>
