--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <header>
-        <h1><img src="" alt=""></h1>
+        <img src="./src/logo sem fundo.png" alt="Logo azuni">
+        <h1>Catálogo</h1>
+        <menu>
+            <h3>
+                Filtrar:
+            </h3>
+            
+        </menu>
     </header>
     <section class="aneis">
         <h2>Anéis</h2>
@@ -67,7 +74,6 @@
             
         </div>
     </section>
-    <script src="conexao.js"></script>
     <script src="logica/catalogo.js"></script>
 </body>
 </html>
