--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
         <h1 id="titulo-principal">Catálogo</h1>
         <menu>
-            <div>
+            <div class="filtro">
                 <h4>
                     Mostrar apenas:
                 </h4>
@@ -45,7 +45,7 @@
             
         </div>
         <div class="finalizar">
-            <input type="button" id="botao-comprar" value="Comprar" disabled>
+            <input type="button" id="botao-comprar" value="Fazer pedido" disabled>
         </div>
     </section>
     <section class="aneis">
@@ -120,6 +120,7 @@
     <script src="./logica/catalogo.js"></script>
     <script src="./logica/adicionaProdutoNoCarrinho.js"></script>
     <script src="./logica/montaPaginaCarrinho.js"></script>
+    <script src="./logica/fazerPedido.js"></script>
 </body>
 
 </html>
