--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
             </ul>
             
         </div>
+        <div class="inserir-cep">
+            <h3>
+                Insira o seu CEP para o cálculo do frete:
+            </h3>
+            <input type="text" placeholder="Digite o seu CEP" name="cep" id="cep" keyboardType="numeric" maxLength={8} minlength={8}>
+        </div>
         <div class="finalizar">
             <input type="button" id="botao-comprar" value="Fazer pedido" disabled>
         </div>
