--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </menu>
     </header>
     <section id="carrinho">
-        <h4>Itens adicionados no carrinho</h4>
+        <h4>Ítens adicionados no carrinho</h4>
         <div class="produto">
             <ul class="lista-carrinho" style="list-style: none;">
                 
