--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <select name="categoria" id="categoria-itens">
                     <option value="todos">Todos</option>
                     <option value="aneis">Anéis</option>
-                    <option value="brincos">Brincos</option>
-                    <option value="correntes">Correntes</option>
+                    <option value="brincos">Argolas/Brincos</option>
+                    <option value="correntes">Chokers/Coláres/Gargantilhas</option>
                     <option value="conjuntos">Conjuntos</option>
                     <option value="pulseiras">Pulseiras</option>
                 </select>
@@ -95,7 +95,7 @@
         </div>
     </section>
     <section class="correntes">
-        <h2>Chokers, coláres e correntes</h2>
+        <h2>Chokers, coláres e gargantilhas</h2>
         <div class="container">
 
         </div>
