--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <option value="todos">Todos</option>
                     <option value="aneis">Anéis</option>
                     <option value="brincos">Argolas/Brincos</option>
-                    <option value="correntes">Chokers/Coláres/Gargantilhas</option>
+                    <option value="correntes">Chokers/Colares/Gargantilhas</option>
                     <option value="conjuntos">Conjuntos</option>
                     <option value="pulseiras">Pulseiras</option>
                 </select>
@@ -95,7 +95,7 @@
         </div>
     </section>
     <section class="correntes">
-        <h2>Chokers, coláres e gargantilhas</h2>
+        <h2>Chokers, colares e gargantilhas</h2>
         <div class="container">
 
         </div>
