--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                         <option value="aneis">Anéis</option>
                         <option value="brincos">Argolas/Brincos</option>
                         <option value="correntes">Chokers/Colares/Gargantilhas</option>
-                        <option value="conjuntos">Conjuntos</option>
                         <option value="pulseiras">Pulseiras</option>
+                        <option value="conjuntos">Conjuntos</option>
                     </select>
                 </div>
                 <span class="material-symbols-outlined carrinho">
@@ -61,7 +61,7 @@
             </div>
         </div>
     </section>
-    <section class="aneis">
+    <section class="produtos aneis">
         <h2>Anéis</h2>
         <div class="container">
             <!-- <div class="container-produto">
@@ -96,24 +96,18 @@
             </div> -->
         </div>
     </section>
-    <section class="brincos">
+    <section class="produtos brincos">
         <h2>Argolas e brincos</h2>
         <div class="container">
         </div>
     </section>
-    <section class="correntes">
+    <section class="produtos correntes">
         <h2>Chokers, colares e gargantilhas</h2>
         <div class="container">
 
         </div>
     </section>
-    <section class="conjuntos">
-        <h2>Conjuntos</h2>
-        <div class="container">
-
-        </div>
-    </section>
-    <section class="pulseiras">
+    <section class="produtos pulseiras">
         <h2>Pulseiras</h2>
         <div class="container">
             <div class="container-produto">
@@ -123,6 +117,12 @@
             </div>
         </div>
     </section>
+    <section class="produtos conjuntos">
+        <h2>Conjuntos</h2>
+        <div class="container">
+
+        </div>
+    </section>
     
     <script src="./logica/estoque.js"></script>
     <script src="./logica/catalogo.js"></script>
@@ -130,6 +130,7 @@
     <script src="./logica/montaPaginaCarrinho.js"></script>
     <script src="./logica/fazerPedido.js"></script>
     <script src="./logica/exibeFotosProdutos.js"></script>
+    <script src="./logica/filtrarCategorias.js"></script>
 </body>
 
 </html>
