--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="filtro">
                     <select name="categoria" id="categoria-itens">
                         <option value="">CATEGORIAS</option>
-                        <option value="todos">Todos</option>
+                        <option value="todos">Todas</option>
                         <option value="aneis">Anéis</option>
                         <option value="brincos">Argolas/Brincos</option>
                         <option value="correntes">Chokers/Colares/Gargantilhas</option>
@@ -43,7 +43,7 @@
     </header>
     <section id="carrinho">
         <div id="transparencia">
-            <h4>Ítens adicionados no carrinho</h4>
+            <h4>Itens adicionados no carrinho</h4>
             <div class="produto">
                 <ul class="lista-carrinho" style="list-style: none;">
             
